--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -49,6 +49,21 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.5.2</version> <!-- Bu sürümü en son sürümle değiştirebilirsiniz -->
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<scope>annotationProcessor</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>annotationProcessor</scope>
+		</dependency>
 
 
 	</dependencies>
